# circular_alignments

./: README.md  format_inputs.py  pyproject.toml  run.sh
input/: circular-reference-first-shifted-fixed.fasta  circular-reference-first-shifted.fasta  circular-reference-first.fasta  circular-shifted-fixed.fasta  circular-shifted.fasta  circular.fasta  example.gb
output/: 10.gappy-shifted.clu  10.gappy.clu  circular-reference-first-shifted-fixed.clu  circular-reference-first-shifted.clu  circular-reference-first.clu  circular-shifted-fixed.clu  circular-shifted.clu  circular.clu
